fix spacing

--- a/app/scss/_how-works.scss
+++ b/app/scss/_how-works.scss
@@ -29,7 +29,7 @@
         @include breakpoints-up(large){
         flex: 2;
         order: 1;
-        height: 41rem;
+        height: 20rem;
         background-image: none;
         //background-image: url('../../images/bg-intro-desktop.svg');
         //background-position: left center;
